# rust-postgres-macros

./: Cargo.toml  build.rs
src/: lib.rs  parser.h
tests/compile-fail/: execute.rs  sql.rs
tests/run-pass/: execute.rs  many_queries.rs  sql.rs
